z-index fixed

--- a/more__services/css/style.css
+++ b/more__services/css/style.css
@@ -117,6 +117,7 @@ body {
 .header {
   background-color: #fff;
   position: fixed;
+  z-index: 5;
   left: 0;
   right: 0;
   top: 0;
@@ -241,6 +242,7 @@ body {
 }
 
 .sidebar {
+  z-index: 2;
   width: 33.333%;
   padding-left: 15px;
 }
