--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,6 +1,7 @@
 .header{
     background-color: #fff;
     position: fixed;
+    z-index: 5;
     left: 0;
     right: 0;
     top: 0;
