--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -4,6 +4,7 @@
 }
 
 .sidebar{
+    z-index: 2;
     width: 33.333%;
     padding-left: 15px;
 }
